Fix links to Github

--- a/atopile/changelog.mdx
+++ b/atopile/changelog.mdx
@@ -39,6 +39,6 @@ This vastly improves our ability to version and iterate on the standard library,
 
 See [`library`](https://github.com/atopile/atopile/tree/main/src/faebryk/library) for the latest and greatest.
 
-It should be better documented. If this is important for you, please vote on the issue: #936
+It should be better documented. If this is important for you, please vote on the [issue](https://github.com/atopile/atopile/issues/936).
 
 </Update>
