--- a/atopile/essentials/5-layout.mdx
+++ b/atopile/essentials/5-layout.mdx
@@ -12,15 +12,7 @@ atopile uses [KiCad](https://kicad.org), the premier open source electronics des
 
 ## Opening KiCad
 
-When you run `ato build`, `ato` generates a KiCad project file for you.
-
-The easiest way to open this is to add the `--open` flag to the `build` command:
-
-```bash
-ato build --open
-```
-
-This opens the KiCad project file in a new window.
+When you run `ato build`, `ato` generates a KiCad project file for you. If you're only building a single build-target, `ato` will open the KiCAD file for you.
 
 ## KiCad plugin
 
@@ -68,8 +60,8 @@ Use KiCad to place-and-route the rest of your design, just like if you got it fr
 If you can't find the quality of KiCad docs you need to get started, drop a comment or upvote on this GitHub Issue !882
 
 
-## Auto-layout :rocket: ?881
+## Auto-layout :rocket:
 
 atopile can do small bits of auto-layout for you, but it's not fully exposed to `ato` yet.
 
-If this is a feature that'd super-charge your workflow, please come vote and discuss it in the GitHub Discussion ?881
+If this is a feature that'd super-charge your workflow, please come vote and discuss it in the [GitHub Discussion](https://github.com/atopile/atopile/discussions/881).
