--- a/atopile/essentials/4-packages.mdx
+++ b/atopile/essentials/4-packages.mdx
@@ -15,7 +15,7 @@ Also, Google is your friend. Packages are often publicly available on github or 
 
 ## Managing dependencies
 
-There are three commands to manage dependencies: `ato add`, `ato sync` and `ato remove`.
+You can manage dependencies using three commands: `ato add`, `ato sync` and `ato remove`.
 
 Installed dependencies are kept in sync by all of these commands, and so you don't need to think too mush about managing environments too much.
 
