Add packages to changelog

--- a/atopile/changelog.mdx
+++ b/atopile/changelog.mdx
@@ -5,6 +5,21 @@ icon: 'rectangle-history'
 
 {/* https://www.mintlify.com/docs/content/components/update */}
 
+<Update label="v0.4" description="Packages 📦">
+atopile's package management system has had a huge upgrade!
+
+To find packages, check out the entirely overhauled [package index](https://packages.atopile.io).
+
+The new commands to packages are clearer and help keep the packages all in sync. See the updated [package guide](essentials/packages-packages).
+
+If you're looking to publish your own packages, [check out the guide](guides/publish).
+
+## Upgrading
+
+Run `ato refactor upgrade` to upgrade your project to the latest compiler.
+
+</Update>
+
 <Update label="v0.3" description="A big release with a lot of new infrastructure">
 
 Firstly, thanks for using atopile! It's been a ride, and we're glad you're here. 🙌
