Fix broken tests

--- a/atopile/changelog.mdx
+++ b/atopile/changelog.mdx
@@ -10,7 +10,7 @@ atopile's package management system has had a huge upgrade!
 
 To find packages, check out the entirely overhauled [package index](https://packages.atopile.io).
 
-The new commands to packages are clearer and help keep the packages all in sync. See the updated [package guide](essentials/packages-packages).
+The new commands to packages are clearer and help keep the packages all in sync. See the updated [package guide](essentials/4-packages).
 
 If you're looking to publish your own packages, [check out the guide](guides/publish).
 
