Add image limitation to docs

--- a/atopile/guides/publish.mdx
+++ b/atopile/guides/publish.mdx
@@ -27,6 +27,16 @@ You can structure your project in two common ways. Keep an eye out for the notes
 {/* 3. A project with multiple **sub-packages**, like [HiL](https://github.com/atopile/hil). This is common when you design something, and then later realise some part of it is useful on its own. */}
 
 
+### Making good packages
+
+Documentation goes a long way to smooth setup! A useful summary helps, but a `README.md` is even better.
+
+The package index automatically detects your `README.md`, and will display the it for you.
+
+<Tip>
+    Currently, the package index doesn't support image uploads. If you want this, check out https://github.com/atopile/atopile/issues/1156
+</Tip>
+
 ### Package Metadata
 
 Here's an example of some package metadata. Copying this, and updating it with your own information is a good place to start.
