--- a/atopile/changelog.mdx
+++ b/atopile/changelog.mdx
@@ -10,9 +10,9 @@ atopile's package management system has had a huge upgrade!
 
 To find packages, check out the entirely overhauled [package index](https://packages.atopile.io).
 
-The new commands to packages are clearer and help keep the packages all in sync. See the updated [package guide](essentials/4-packages).
+The new commands to packages are clearer and help keep the packages all in sync. See the updated [package guide](/atopile/essentials/4-packages).
 
-If you're looking to publish your own packages, [check out the guide](guides/publish).
+If you're looking to publish your own packages, [check out the guide](/atopile/guides/publish).
 
 ## Upgrading
 
