--- a/atopile/changelog.mdx
+++ b/atopile/changelog.mdx
@@ -5,7 +5,7 @@ icon: 'rectangle-history'
 
 {/* https://www.mintlify.com/docs/content/components/update */}
 
-<Update label="v0.5" description="`.required` interfaces, i2c checks and `[accessors]`">
+<Update label="v0.5" description="🌈 Features and Windows support">
 
 If the `.required` attribute is set `True` on an interface, that interface MUST be connected to from outside that module.
 Take the example of a `LDO` - you reasonably MUST connect to the power input and outputs.
