Fix un-rendered :emoji:

--- a/atopile/essentials/1-the-ato-language.mdx
+++ b/atopile/essentials/1-the-ato-language.mdx
@@ -107,7 +107,7 @@ Several legal ways exist to combine them.
 
 ### Sweet, so now that all these values are around the place what can be done with them?
 
-:sparkles: **Maths** :sparkles:
+✨ **Maths** ✨
 
 atopile does two things for you with these values:
 1. Check that assertions about their relationships to one another are true
