--- a/atopile/essentials/5-layout.mdx
+++ b/atopile/essentials/5-layout.mdx
@@ -60,7 +60,7 @@ Use KiCad to place-and-route the rest of your design, just like if you got it fr
 If you can't find the quality of KiCad docs you need to get started, drop a comment or upvote on this GitHub Issue !882
 
 
-## Auto-layout :rocket:
+## Auto-layout 🚀
 
 atopile can do small bits of auto-layout for you, but it's not fully exposed to `ato` yet.
 
