Add MCP setup command

--- a/atopile/quickstart.mdx
+++ b/atopile/quickstart.mdx
@@ -25,6 +25,15 @@ We also strongly recommend installing the [atopile VSCode/Cursor extension](http
 
 ![atopile extension](./images/vscode-plugin.png)
 
+<Accordion title="(Experimental) MCP server">
+    Setup an MCP server for this documentation with
+
+    ``` sh
+    npx mint-mcp add atopile
+    ```
+</Accordion>
+
+
 ## Installing KiCAD
 
 If you are on macOS, and you have `brew` installed, you can install KiCAD with:
